--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -713,8 +713,20 @@ video {
   top: 25%;
 }
 
-.bottom-6 {
-  bottom: 1.5rem;
+.-top-\[0\.135rem\] {
+  top: -0.135rem;
+}
+
+.-top-\[0\.145rem\] {
+  top: -0.145rem;
+}
+
+.-top-\[0\.155rem\] {
+  top: -0.155rem;
+}
+
+.-top-\[0\.2rem\] {
+  top: -0.2rem;
 }
 
 .-z-50 {
@@ -978,6 +990,11 @@ video {
   height: 1.5rem;
 }
 
+.size-3 {
+  width: 0.75rem;
+  height: 0.75rem;
+}
+
 .h-0 {
   height: 0px;
 }
@@ -1046,8 +1063,8 @@ video {
   max-height: 100%;
 }
 
-.max-h-\[15vh\] {
-  max-height: 15vh;
+.max-h-\[18vh\] {
+  max-height: 18vh;
 }
 
 .max-h-\[300px\] {
@@ -1072,10 +1089,6 @@ video {
 
 .max-h-\[calc\(80vh-200px\)\] {
   max-height: calc(80vh - 200px);
-}
-
-.max-h-\[18vh\] {
-  max-height: 18vh;
 }
 
 .min-h-0 {
@@ -1186,6 +1199,10 @@ video {
   width: 30%;
 }
 
+.w-\[35\%\] {
+  width: 35%;
+}
+
 .w-\[40\%\] {
   width: 40%;
 }
@@ -1259,6 +1276,10 @@ video {
   min-width: 260px;
 }
 
+.min-w-\[280px\] {
+  min-width: 280px;
+}
+
 .max-w-12 {
   max-width: 3rem;
 }
@@ -1327,6 +1348,12 @@ video {
   border-collapse: separate;
 }
 
+.border-spacing-2 {
+  --tw-border-spacing-x: 0.5rem;
+  --tw-border-spacing-y: 0.5rem;
+  border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
+}
+
 .origin-bottom {
   transform-origin: bottom;
 }
@@ -1380,11 +1407,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-x-1\/2 {
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .rotate-180 {
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1404,12 +1426,12 @@ video {
   cursor: default;
 }
 
-.cursor-pointer {
-  cursor: pointer;
-}
-
 .cursor-not-allowed {
   cursor: not-allowed;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .select-none {
@@ -1543,6 +1565,12 @@ video {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
 .\!place-self-center {
   place-self: center !important;
 }
@@ -1649,6 +1677,10 @@ video {
   border-width: 0px;
 }
 
+.border-2 {
+  border-width: 2px;
+}
+
 .border-b {
   border-bottom-width: 1px;
 }
@@ -1717,6 +1749,11 @@ video {
   border-color: rgb(83 207 110 / var(--tw-border-opacity, 1));
 }
 
+.border-vla2 {
+  --tw-border-opacity: 1;
+  border-color: rgb(75 168 95 / var(--tw-border-opacity, 1));
+}
+
 .border-vlp {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
@@ -1740,11 +1777,6 @@ video {
 
 .border-vls2\/20 {
   border-color: rgb(43 52 64 / 0.2);
-}
-
-.border-vla2 {
-  --tw-border-opacity: 1;
-  border-color: rgb(75 168 95 / var(--tw-border-opacity, 1));
 }
 
 .border-vls2\/40 {
@@ -1854,6 +1886,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.bg-vlp2 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(232 233 235 / var(--tw-bg-opacity, 1));
+}
+
 .bg-vls2 {
   --tw-bg-opacity: 1;
   background-color: rgb(43 52 64 / var(--tw-bg-opacity, 1));
@@ -1864,9 +1901,9 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-vlp2 {
+.bg-blue-50 {
   --tw-bg-opacity: 1;
-  background-color: rgb(232 233 235 / var(--tw-bg-opacity, 1));
+  background-color: rgb(239 246 255 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-50 {
@@ -1921,6 +1958,10 @@ video {
   --tw-gradient-to: #dc2626 var(--tw-gradient-to-position);
 }
 
+.\!p-0 {
+  padding: 0px !important;
+}
+
 .\!p-1 {
   padding: 0.25rem !important;
 }
@@ -1969,8 +2010,8 @@ video {
   padding: 2rem;
 }
 
-.\!p-0 {
-  padding: 0px !important;
+.\!p-0\.5 {
+  padding: 0.125rem !important;
 }
 
 .\!px-2 {
@@ -2211,6 +2252,21 @@ video {
   line-height: 1.25;
 }
 
+.\!text-gray-400 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(156 163 175 / var(--tw-text-opacity, 1)) !important;
+}
+
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity, 1));
+}
+
 .text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity, 1));
@@ -2333,24 +2389,21 @@ video {
   color: rgb(250 204 21 / 0.7);
 }
 
-.text-gray-400 {
+.text-gray-300 {
   --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
+  color: rgb(209 213 219 / var(--tw-text-opacity, 1));
 }
 
-.text-gray-700 {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity, 1));
+.text-red-500\/50 {
+  color: rgb(239 68 68 / 0.5);
 }
 
-.text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity, 1));
+.text-red-500\/60 {
+  color: rgb(239 68 68 / 0.6);
 }
 
-.\!text-gray-400 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(156 163 175 / var(--tw-text-opacity, 1)) !important;
+.text-red-500\/70 {
+  color: rgb(239 68 68 / 0.7);
 }
 
 .text-opacity-90 {
@@ -2401,10 +2454,6 @@ video {
 
 .opacity-95 {
   opacity: 0.95;
-}
-
-.opacity-50 {
-  opacity: 0.5;
 }
 
 .shadow {
@@ -2467,8 +2516,22 @@ video {
   --tw-ring-color: rgb(139 145 151 / 0.4);
 }
 
-.ring-vls2\/60 {
-  --tw-ring-color: rgb(43 52 64 / 0.6);
+.ring-vls2 {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(43 52 64 / var(--tw-ring-opacity, 1));
+}
+
+.ring-vls\/65 {
+  --tw-ring-color: rgb(139 145 151 / 0.65);
+}
+
+.ring-vls\/80 {
+  --tw-ring-color: rgb(139 145 151 / 0.8);
+}
+
+.ring-vls {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(139 145 151 / var(--tw-ring-opacity, 1));
 }
 
 .blur {
@@ -3425,6 +3488,9 @@ input[type='number'] {
   line-height: 1.25rem;
   --tw-text-opacity: 1;
   color: rgb(36 44 54 / var(--tw-text-opacity, 1));
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
@@ -3465,6 +3531,9 @@ input[type='number'] {
   font-weight: 500;
   --tw-text-opacity: 1;
   color: rgb(212 212 212 / var(--tw-text-opacity, 1));
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
@@ -3827,6 +3896,9 @@ input[type='number'] {
   line-height: 1.25rem;
   --tw-text-opacity: 1;
   color: rgb(36 44 54 / var(--tw-text-opacity, 1));
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
@@ -4285,6 +4357,16 @@ input[type='radio']:hover {
   color: rgb(139 145 151 / 0.6);
 }
 
+@keyframes pulse {
+  50% {
+    opacity: .5;
+  }
+}
+
+.hover\:animate-pulse:hover {
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
 .hover\:border-vla:hover {
   --tw-border-opacity: 1;
   border-color: rgb(83 207 110 / var(--tw-border-opacity, 1));
@@ -4302,6 +4384,10 @@ input[type='radio']:hover {
 .hover\:border-vred-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
+}
+
+.hover\:border-vls\/40:hover {
+  border-color: rgb(139 145 151 / 0.4);
 }
 
 .hover\:bg-gray-300:hover {
@@ -4354,13 +4440,14 @@ input[type='radio']:hover {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-vlp-1-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(204 204 204 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:bg-vlp2:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(232 233 235 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-vlp\/80:hover {
-  background-color: rgb(255 255 255 / 0.8);
 }
 
 .hover\:bg-vlp3:hover {
@@ -4426,9 +4513,48 @@ input[type='radio']:hover {
   color: rgb(83 207 110 / var(--tw-placeholder-opacity, 1));
 }
 
+.hover\:bg-blend-darken:hover {
+  background-blend-mode: darken;
+}
+
+.hover\:bg-blend-saturation:hover {
+  background-blend-mode: saturation;
+}
+
+.hover\:shadow-inner:hover {
+  --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:shadow-lg:hover {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:ring-vls\/65:hover {
+  --tw-ring-color: rgb(139 145 151 / 0.65);
+}
+
+.hover\:ring-vls\/80:hover {
+  --tw-ring-color: rgb(139 145 151 / 0.8);
+}
+
+.hover\:ring-vls:hover {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(139 145 151 / var(--tw-ring-opacity, 1));
+}
+
 .hover\:brightness-110:hover {
   --tw-brightness: brightness(1.1);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.hover\:backdrop-brightness-95:hover {
+  --tw-backdrop-brightness: brightness(.95);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
 .hover\:placeholder\:text-vla:hover::-moz-placeholder {
@@ -4540,6 +4666,10 @@ input[type='radio']:hover {
   pointer-events: none;
 }
 
+.disabled\:cursor-not-allowed:disabled {
+  cursor: not-allowed;
+}
+
 .disabled\:opacity-50:disabled {
   opacity: 0.5;
 }
@@ -4571,6 +4701,11 @@ input[type='radio']:hover {
 .dark\:border-neutral-700:is(.dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(64 64 64 / var(--tw-border-opacity, 1));
+}
+
+.dark\:border-vda2:is(.dark *) {
+  --tw-border-opacity: 1;
+  border-color: rgb(254 127 118 / var(--tw-border-opacity, 1));
 }
 
 .dark\:border-vdp3:is(.dark *) {
@@ -4623,9 +4758,9 @@ input[type='radio']:hover {
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
-.dark\:border-vda2:is(.dark *) {
+.dark\:border-vda:is(.dark *) {
   --tw-border-opacity: 1;
-  border-color: rgb(254 127 118 / var(--tw-border-opacity, 1));
+  border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
 .dark\:border-t-vds2:is(.dark *) {
@@ -4765,6 +4900,10 @@ input[type='radio']:hover {
 
 .dark\:text-yellow-400\/70:is(.dark *) {
   color: rgb(250 204 21 / 0.7);
+}
+
+.dark\:text-red-500\/80:is(.dark *) {
+  color: rgb(239 68 68 / 0.8);
 }
 
 .dark\:underline:is(.dark *) {
