--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -665,6 +665,10 @@ video {
   right: 0.5rem;
 }
 
+.right-3 {
+  right: 0.75rem;
+}
+
 .start-1\/2 {
   inset-inline-start: 50%;
 }
@@ -683,10 +687,6 @@ video {
 
 .top-1\/4 {
   top: 25%;
-}
-
-.right-3 {
-  right: 0.75rem;
 }
 
 .top-3 {
@@ -758,6 +758,11 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .my-4 {
@@ -877,6 +882,10 @@ video {
   margin-top: auto;
 }
 
+.mr-0\.5 {
+  margin-right: 0.125rem;
+}
+
 .block {
   display: block;
 }
@@ -940,8 +949,16 @@ video {
   height: 2.5rem;
 }
 
+.h-28 {
+  height: 7rem;
+}
+
 .h-4 {
   height: 1rem;
+}
+
+.h-5 {
+  height: 1.25rem;
 }
 
 .h-6 {
@@ -976,8 +993,8 @@ video {
   height: 100vh;
 }
 
-.h-5 {
-  height: 1.25rem;
+.max-h-40 {
+  max-height: 10rem;
 }
 
 .max-h-80 {
@@ -998,10 +1015,6 @@ video {
 
 .max-h-\[calc\(80vh-200px\)\] {
   max-height: calc(80vh - 200px);
-}
-
-.max-h-\[50vh\] {
-  max-height: 50vh;
 }
 
 .min-h-0 {
@@ -1052,6 +1065,10 @@ video {
   width: 3rem;
 }
 
+.w-14 {
+  width: 3.5rem;
+}
+
 .w-16 {
   width: 4rem;
 }
@@ -1072,12 +1089,20 @@ video {
   width: 1rem;
 }
 
+.w-5 {
+  width: 1.25rem;
+}
+
 .w-52 {
   width: 13rem;
 }
 
 .w-56 {
   width: 14rem;
+}
+
+.w-60 {
+  width: 15rem;
 }
 
 .w-72 {
@@ -1108,6 +1133,10 @@ video {
   width: 30%;
 }
 
+.w-\[35\%\] {
+  width: 35%;
+}
+
 .w-\[40\%\] {
   width: 40%;
 }
@@ -1136,6 +1165,10 @@ video {
   width: 75%;
 }
 
+.w-\[90\%\] {
+  width: 90%;
+}
+
 .w-\[calc\(100\%-10px\)\] {
   width: calc(100% - 10px);
 }
@@ -1161,10 +1194,6 @@ video {
   width: 100vw;
 }
 
-.w-5 {
-  width: 1.25rem;
-}
-
 .min-w-0 {
   min-width: 0px;
 }
@@ -1177,6 +1206,10 @@ video {
   max-width: 18rem;
 }
 
+.max-w-\[30\%\] {
+  max-width: 30%;
+}
+
 .max-w-\[40\%\] {
   max-width: 40%;
 }
@@ -1187,10 +1220,6 @@ video {
 
 .max-w-\[50\%\] {
   max-width: 50%;
-}
-
-.max-w-\[90\%\] {
-  max-width: 90%;
 }
 
 .max-w-full {
@@ -1299,6 +1328,10 @@ video {
   cursor: default;
 }
 
+.cursor-not-allowed {
+  cursor: not-allowed;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -1307,6 +1340,10 @@ video {
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
+}
+
+.resize-none {
+  resize: none;
 }
 
 .resize {
@@ -1365,6 +1402,10 @@ video {
   justify-content: space-between;
 }
 
+.justify-around {
+  justify-content: space-around;
+}
+
 .justify-evenly {
   justify-content: space-evenly;
 }
@@ -1395,12 +1436,6 @@ video {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.75rem * var(--tw-space-x-reverse));
   margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1rem * var(--tw-space-x-reverse));
-  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-x-6 > :not([hidden]) ~ :not([hidden]) {
@@ -1501,11 +1536,6 @@ video {
   border-bottom-left-radius: 0px;
 }
 
-.rounded-t {
-  border-top-left-radius: 0.25rem;
-  border-top-right-radius: 0.25rem;
-}
-
 .rounded-t-md {
   border-top-left-radius: 0.375rem;
   border-top-right-radius: 0.375rem;
@@ -1522,15 +1552,6 @@ video {
 
 .border-0 {
   border-width: 0px;
-}
-
-.border-x {
-  border-left-width: 1px;
-  border-right-width: 1px;
-}
-
-.border-b {
-  border-bottom-width: 1px;
 }
 
 .border-b-0 {
@@ -1949,6 +1970,10 @@ video {
   padding-right: 1rem;
 }
 
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -2187,6 +2212,10 @@ video {
 
 .opacity-35 {
   opacity: 0.35;
+}
+
+.opacity-50 {
+  opacity: 0.5;
 }
 
 .opacity-90 {
@@ -4194,11 +4223,6 @@ input[type='radio']:hover {
 .hover\:bg-vlp:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-vlp2:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(232 233 235 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:fill-vls:hover {
