--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -770,11 +770,6 @@ video {
   margin-bottom: 1rem;
 }
 
-.my-auto {
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
 .-ms-32 {
   margin-inline-start: -8rem;
 }
@@ -982,6 +977,10 @@ video {
   height: 3px;
 }
 
+.h-\[60\%\] {
+  height: 60%;
+}
+
 .h-\[80\%\] {
   height: 80%;
 }
@@ -996,10 +995,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-\[60\%\] {
-  height: 60%;
 }
 
 .max-h-40 {
@@ -1024,6 +1019,14 @@ video {
 
 .max-h-\[calc\(80vh-200px\)\] {
   max-height: calc(80vh - 200px);
+}
+
+.max-h-\[30\%\] {
+  max-height: 30%;
+}
+
+.max-h-\[10\%\] {
+  max-height: 10%;
 }
 
 .min-h-0 {
@@ -1217,10 +1220,6 @@ video {
 
 .max-w-\[30\%\] {
   max-width: 30%;
-}
-
-.max-w-\[40\%\] {
-  max-width: 40%;
 }
 
 .max-w-\[5\%\] {
@@ -1600,8 +1599,18 @@ video {
   border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
 }
 
+.border-green-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(34 197 94 / var(--tw-border-opacity, 1));
+}
+
 .border-neutral-100\/70 {
   border-color: rgb(245 245 245 / 0.7);
+}
+
+.border-red-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity, 1));
 }
 
 .border-slate-300 {
@@ -1650,16 +1659,6 @@ video {
 
 .border-vls2\/20 {
   border-color: rgb(43 52 64 / 0.2);
-}
-
-.border-green-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(34 197 94 / var(--tw-border-opacity, 1));
-}
-
-.border-red-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(239 68 68 / var(--tw-border-opacity, 1));
 }
 
 .border-yellow-500 {
@@ -1783,6 +1782,11 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.\!bg-vls2 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(43 52 64 / var(--tw-bg-opacity, 1)) !important;
 }
 
 .bg-opacity-50 {
@@ -1930,6 +1934,11 @@ video {
   padding-bottom: 0px;
 }
 
+.py-0\.5 {
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
+}
+
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -1948,11 +1957,6 @@ video {
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
-}
-
-.py-0\.5 {
-  padding-top: 0.125rem;
-  padding-bottom: 0.125rem;
 }
 
 .\!pl-12 {
@@ -2085,6 +2089,10 @@ video {
   line-height: 1rem;
 }
 
+.font-light {
+  font-weight: 300;
+}
+
 .font-medium {
   font-weight: 500;
 }
@@ -2095,10 +2103,6 @@ video {
 
 .font-semibold {
   font-weight: 600;
-}
-
-.font-light {
-  font-weight: 300;
 }
 
 .capitalize {
@@ -2126,6 +2130,11 @@ video {
 .text-gray-950 {
   --tw-text-opacity: 1;
   color: rgb(3 7 18 / var(--tw-text-opacity, 1));
+}
+
+.text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity, 1));
 }
 
 .text-red-500 {
@@ -2209,14 +2218,14 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.text-green-500 {
-  --tw-text-opacity: 1;
-  color: rgb(34 197 94 / var(--tw-text-opacity, 1));
-}
-
 .text-yellow-500 {
   --tw-text-opacity: 1;
   color: rgb(234 179 8 / var(--tw-text-opacity, 1));
+}
+
+.\!text-vls2 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(43 52 64 / var(--tw-text-opacity, 1)) !important;
 }
 
 .text-opacity-90 {
@@ -2336,11 +2345,6 @@ video {
 
 .blur {
   --tw-blur: blur(8px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.blur-md {
-  --tw-blur: blur(12px);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -4223,6 +4227,19 @@ input[type='radio']:hover {
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
+.hover\:border-vls\/50:hover {
+  border-color: rgb(139 145 151 / 0.5);
+}
+
+.hover\:border-vls\/70:hover {
+  border-color: rgb(139 145 151 / 0.7);
+}
+
+.hover\:border-vls:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(139 145 151 / var(--tw-border-opacity, 1));
+}
+
 .hover\:bg-gray-300:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity, 1));
@@ -4271,6 +4288,11 @@ input[type='radio']:hover {
 .hover\:bg-vlp:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:\!bg-vls3:hover {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(36 44 54 / var(--tw-bg-opacity, 1)) !important;
 }
 
 .hover\:fill-vls:hover {
@@ -4325,6 +4347,21 @@ input[type='radio']:hover {
 .hover\:text-vls2:hover {
   --tw-text-opacity: 1;
   color: rgb(43 52 64 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-vls3:hover {
+  --tw-text-opacity: 1;
+  color: rgb(36 44 54 / var(--tw-text-opacity, 1));
+}
+
+.hover\:\!text-vls3:hover {
+  --tw-text-opacity: 1 !important;
+  color: rgb(36 44 54 / var(--tw-text-opacity, 1)) !important;
+}
+
+.hover\:\!text-blue-500:hover {
+  --tw-text-opacity: 1 !important;
+  color: rgb(59 130 246 / var(--tw-text-opacity, 1)) !important;
 }
 
 .hover\:underline:hover {
@@ -4562,6 +4599,11 @@ input[type='radio']:hover {
   background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
 }
 
+.dark\:\!bg-vds3light:is(.dark *) {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(163 163 163 / var(--tw-bg-opacity, 1)) !important;
+}
+
 .dark\:text-neutral-400:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(163 163 163 / var(--tw-text-opacity, 1));
@@ -4604,6 +4646,11 @@ input[type='radio']:hover {
 .dark\:text-white:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.dark\:\!text-vds3light:is(.dark *) {
+  --tw-text-opacity: 1 !important;
+  color: rgb(163 163 163 / var(--tw-text-opacity, 1)) !important;
 }
 
 .dark\:underline:is(.dark *) {
@@ -4688,6 +4735,11 @@ input[type='radio']:hover {
   background-color: rgb(63 63 70 / var(--tw-bg-opacity, 1));
 }
 
+.dark\:hover\:\!bg-vds:hover:is(.dark *) {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(212 212 212 / var(--tw-bg-opacity, 1)) !important;
+}
+
 .dark\:hover\:fill-vred-300:hover:is(.dark *) {
   fill: #FEA09A;
 }
@@ -4720,6 +4772,21 @@ input[type='radio']:hover {
 .dark\:hover\:text-white:hover:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.dark\:hover\:\!text-vds:hover:is(.dark *) {
+  --tw-text-opacity: 1 !important;
+  color: rgb(212 212 212 / var(--tw-text-opacity, 1)) !important;
+}
+
+.dark\:hover\:\!text-red-500:hover:is(.dark *) {
+  --tw-text-opacity: 1 !important;
+  color: rgb(239 68 68 / var(--tw-text-opacity, 1)) !important;
+}
+
+.dark\:hover\:\!text-blue-500:hover:is(.dark *) {
+  --tw-text-opacity: 1 !important;
+  color: rgb(59 130 246 / var(--tw-text-opacity, 1)) !important;
 }
 
 .dark\:hover\:placeholder-vred-300:hover:is(.dark *)::-moz-placeholder {
