--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -616,10 +616,6 @@ video {
   position: absolute;
 }
 
-.\!absolute {
-  position: absolute !important;
-}
-
 .relative {
   position: relative;
 }
@@ -695,14 +691,6 @@ video {
 
 .top-3 {
   top: 0.75rem;
-}
-
-.\!right-0 {
-  right: 0px !important;
-}
-
-.\!top-0 {
-  top: 0px !important;
 }
 
 .-z-50 {
@@ -1082,10 +1070,6 @@ video {
   width: 20%;
 }
 
-.w-1\/6 {
-  width: 16.666667%;
-}
-
 .w-10 {
   width: 2.5rem;
 }
@@ -1170,10 +1154,6 @@ video {
   width: 40%;
 }
 
-.w-\[45\%\] {
-  width: 45%;
-}
-
 .w-\[5\%\] {
   width: 5%;
 }
@@ -1227,8 +1207,8 @@ video {
   width: 100vw;
 }
 
-.w-\[64\%\] {
-  width: 64%;
+.w-\[49\%\] {
+  width: 49%;
 }
 
 .min-w-0 {
@@ -1469,12 +1449,6 @@ video {
   gap: 2rem;
 }
 
-.space-x-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
@@ -1503,6 +1477,12 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
 .\!place-self-center {
@@ -1635,6 +1615,21 @@ video {
   border-top-width: 8px;
 }
 
+.\!border-green-500 {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(34 197 94 / var(--tw-border-opacity, 1)) !important;
+}
+
+.\!border-red-500 {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity, 1)) !important;
+}
+
+.\!border-yellow-500 {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(234 179 8 / var(--tw-border-opacity, 1)) !important;
+}
+
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
@@ -1707,26 +1702,6 @@ video {
   border-color: rgb(234 179 8 / var(--tw-border-opacity, 1));
 }
 
-.border-green-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(74 222 128 / var(--tw-border-opacity, 1));
-}
-
-.\!border-yellow-500 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(234 179 8 / var(--tw-border-opacity, 1)) !important;
-}
-
-.\!border-red-500 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(239 68 68 / var(--tw-border-opacity, 1)) !important;
-}
-
-.\!border-green-500 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(34 197 94 / var(--tw-border-opacity, 1)) !important;
-}
-
 .border-e-transparent {
   border-inline-end-color: transparent;
 }
@@ -1745,9 +1720,21 @@ video {
   border-top-color: rgb(43 52 64 / var(--tw-border-opacity, 1));
 }
 
+.\!bg-green-500\/10 {
+  background-color: rgb(34 197 94 / 0.1) !important;
+}
+
+.\!bg-red-500\/10 {
+  background-color: rgb(239 68 68 / 0.1) !important;
+}
+
 .\!bg-vlp {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1)) !important;
+}
+
+.\!bg-yellow-500\/10 {
+  background-color: rgb(234 179 8 / 0.1) !important;
 }
 
 .bg-black {
@@ -1788,6 +1775,10 @@ video {
 .bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1));
+}
+
+.bg-green-500\/10 {
+  background-color: rgb(34 197 94 / 0.1);
 }
 
 .bg-orange-500 {
@@ -1838,56 +1829,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-green-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(187 247 208 / var(--tw-bg-opacity, 1));
-}
-
-.bg-green-500\/50 {
-  background-color: rgb(34 197 94 / 0.5);
-}
-
-.bg-green-500\/20 {
-  background-color: rgb(34 197 94 / 0.2);
-}
-
-.bg-green-500\/10 {
-  background-color: rgb(34 197 94 / 0.1);
-}
-
-.bg-yellow-500\/10 {
-  background-color: rgb(234 179 8 / 0.1);
-}
-
-.\!bg-yellow-500 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(234 179 8 / var(--tw-bg-opacity, 1)) !important;
-}
-
-.\!bg-yellow-500\/20 {
-  background-color: rgb(234 179 8 / 0.2) !important;
-}
-
-.\!bg-red-500\/20 {
-  background-color: rgb(239 68 68 / 0.2) !important;
-}
-
-.\!bg-red-500\/10 {
-  background-color: rgb(239 68 68 / 0.1) !important;
-}
-
-.\!bg-green-500\/20 {
-  background-color: rgb(34 197 94 / 0.2) !important;
-}
-
-.\!bg-green-500\/10 {
-  background-color: rgb(34 197 94 / 0.1) !important;
-}
-
-.\!bg-yellow-500\/10 {
-  background-color: rgb(234 179 8 / 0.1) !important;
 }
 
 .bg-opacity-50 {
@@ -2108,14 +2049,6 @@ video {
   padding-top: 0.5rem;
 }
 
-.pr-6 {
-  padding-right: 1.5rem;
-}
-
-.\!pr-6 {
-  padding-right: 1.5rem !important;
-}
-
 .text-left {
   text-align: left;
 }
@@ -2234,6 +2167,16 @@ video {
   letter-spacing: 0.025em;
 }
 
+.\!text-green-500 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(34 197 94 / var(--tw-text-opacity, 1)) !important;
+}
+
+.\!text-red-500 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(239 68 68 / var(--tw-text-opacity, 1)) !important;
+}
+
 .\!text-vla {
   --tw-text-opacity: 1 !important;
   color: rgb(83 207 110 / var(--tw-text-opacity, 1)) !important;
@@ -2244,9 +2187,9 @@ video {
   color: rgb(43 52 64 / var(--tw-text-opacity, 1)) !important;
 }
 
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
+.\!text-yellow-500 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(234 179 8 / var(--tw-text-opacity, 1)) !important;
 }
 
 .text-gray-600 {
@@ -2353,21 +2296,6 @@ video {
 .text-yellow-500 {
   --tw-text-opacity: 1;
   color: rgb(234 179 8 / var(--tw-text-opacity, 1));
-}
-
-.\!text-yellow-500 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(234 179 8 / var(--tw-text-opacity, 1)) !important;
-}
-
-.\!text-red-500 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(239 68 68 / var(--tw-text-opacity, 1)) !important;
-}
-
-.\!text-green-500 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(34 197 94 / var(--tw-text-opacity, 1)) !important;
 }
 
 .text-opacity-90 {
@@ -4614,12 +4542,6 @@ input[type='radio']:hover {
 .active\:scale-90:active {
   --tw-scale-x: .9;
   --tw-scale-y: .9;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.active\:scale-95:active {
-  --tw-scale-x: .95;
-  --tw-scale-y: .95;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
