--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,9 +67,10 @@ html {
   background: #364352; /* Hover effect */
   clip-path: inset(0);
 }
+
 /* Table Alternative Scrollbar Light */
 .alt-table-scrollbar::-webkit-scrollbar {
-  width: 12px; /* Adjust the width of the scrollbar */
+  width: 9px; /* Adjust the width of the scrollbar */
 }
 /* Alternative Table Scroll */
 .alt-table-scrollbar::-webkit-scrollbar-track {
@@ -77,14 +78,23 @@ html {
   border-radius: 4px;
 }
 .alt-table-scrollbar::-webkit-scrollbar-thumb {
-  background: #2b3440; /* The draggable scrolling handle */
-  border-radius: 4px; /* Roundness of the scrollbar handle */
+  background: #2b344028;
+  border-radius: 4px;
 }
 .alt-table-scrollbar::-webkit-scrollbar-thumb:hover {
-  background: #242c36; /* Hover effect */
+  background: #2b344059; /* Hover effect */
+}
+/* Alternative Table Dark */
+.dark .alt-table-scrollbar::-webkit-scrollbar-track {
+  background: #27272ab6;
+}
+.dark .alt-table-scrollbar::-webkit-scrollbar-thumb {
+  background: #18181b83; /* Darker handle for dark mode */
+}
+.dark .alt-table-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #18181b; /* Hover effect for dark mode */
 }
 
-/* MARK: Scrollbars Dark */
 /* Global */
 .dark ::-webkit-scrollbar-track {
   background: #525252;
@@ -107,16 +117,6 @@ html {
 }
 .dark .table-scrollbar::-webkit-scrollbar-thumb:hover {
   background: #1b1b1f; /* Hover effect for dark mode */
-}
-/* Alternative Table Dark */
-.dark .alt-table-scrollbar::-webkit-scrollbar-track {
-  background: #525252;
-}
-.dark .alt-table-scrollbar::-webkit-scrollbar-thumb {
-  background: #18181b; /* Darker handle for dark mode */
-}
-.dark .alt-table-scrollbar::-webkit-scrollbar-thumb:hover {
-  background: #3f3f46; /* Hover effect for dark mode */
 }
 
 .max-height-table {
