--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -779,6 +779,11 @@ video {
   margin-bottom: 1rem;
 }
 
+.my-6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
 .-ms-32 {
   margin-inline-start: -8rem;
 }
@@ -855,6 +860,10 @@ video {
   margin-right: 1.5rem;
 }
 
+.mt-0 {
+  margin-top: 0px;
+}
+
 .mt-0\.5 {
   margin-top: 0.125rem;
 }
@@ -877,6 +886,10 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
 .mt-8 {
@@ -1449,6 +1462,12 @@ video {
   gap: 2rem;
 }
 
+.space-x-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
@@ -1477,10 +1496,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
-
-.place-self-start {
-  place-self: start;
 }
 
 .\!place-self-center {
@@ -1786,10 +1801,6 @@ video {
   background-color: rgb(71 85 105 / var(--tw-bg-opacity, 1));
 }
 
-.bg-transparent {
-  background-color: transparent;
-}
-
 .bg-vdp {
   --tw-bg-opacity: 1;
   background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
@@ -1915,6 +1926,11 @@ video {
   padding: 2rem;
 }
 
+.\!px-4 {
+  padding-left: 1rem !important;
+  padding-right: 1rem !important;
+}
+
 .\!py-2 {
   padding-top: 0.5rem !important;
   padding-bottom: 0.5rem !important;
@@ -2018,6 +2034,10 @@ video {
 
 .pr-2 {
   padding-right: 0.5rem;
+}
+
+.pr-20 {
+  padding-right: 5rem;
 }
 
 .pr-4 {
@@ -2130,6 +2150,11 @@ video {
   text-transform: capitalize;
 }
 
+.ordinal {
+  --tw-ordinal: ordinal;
+  font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero) var(--tw-numeric-figure) var(--tw-numeric-spacing) var(--tw-numeric-fraction);
+}
+
 .leading-6 {
   line-height: 1.5rem;
 }
@@ -2150,6 +2175,11 @@ video {
 .\!text-vls2 {
   --tw-text-opacity: 1 !important;
   color: rgb(43 52 64 / var(--tw-text-opacity, 1)) !important;
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity, 1));
 }
 
 .text-gray-600 {
@@ -2261,6 +2291,11 @@ video {
 .text-yellow-500 {
   --tw-text-opacity: 1;
   color: rgb(234 179 8 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity, 1));
 }
 
 .text-opacity-90 {
@@ -3871,7 +3906,7 @@ input[type='number'] {
   margin-left: -150%;
   margin-top: -150%;
   opacity: 0;
-  transition: all 0.6s ease;
+  transition: all 0.3s ease;
   /* Smooth transition for the ripple */
 }
 
@@ -3885,7 +3920,7 @@ input[type='number'] {
   margin-left: -150%;
   margin-top: -150%;
   opacity: 0;
-  transition: all 0.6s ease;
+  transition: all 0.3s ease;
   /* Smooth transition for the ripple */
 }
 
@@ -4339,6 +4374,11 @@ input[type='radio']:hover {
   background-color: rgb(22 163 74 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-red-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:bg-red-900:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(127 29 29 / var(--tw-bg-opacity, 1));
@@ -4383,6 +4423,11 @@ input[type='radio']:hover {
   color: rgb(59 130 246 / var(--tw-text-opacity, 1)) !important;
 }
 
+.hover\:\!text-orange-500:hover {
+  --tw-text-opacity: 1 !important;
+  color: rgb(249 115 22 / var(--tw-text-opacity, 1)) !important;
+}
+
 .hover\:\!text-red-500:hover {
   --tw-text-opacity: 1 !important;
   color: rgb(239 68 68 / var(--tw-text-opacity, 1)) !important;
@@ -4391,6 +4436,11 @@ input[type='radio']:hover {
 .hover\:\!text-vla:hover {
   --tw-text-opacity: 1 !important;
   color: rgb(83 207 110 / var(--tw-text-opacity, 1)) !important;
+}
+
+.hover\:\!text-vla2:hover {
+  --tw-text-opacity: 1 !important;
+  color: rgb(75 168 95 / var(--tw-text-opacity, 1)) !important;
 }
 
 .hover\:text-blue-400:hover {
@@ -4468,11 +4518,6 @@ input[type='radio']:hover {
   --tw-ring-color: rgb(139 145 151 / 0.8);
 }
 
-.hover\:brightness-125:hover {
-  --tw-brightness: brightness(1.25);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
 .hover\:placeholder\:text-vla:hover::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(83 207 110 / var(--tw-text-opacity, 1));
@@ -4486,10 +4531,6 @@ input[type='radio']:hover {
 .focus\:border-vla:focus {
   --tw-border-opacity: 1;
   border-color: rgb(83 207 110 / var(--tw-border-opacity, 1));
-}
-
-.focus\:border-vls\/40:focus {
-  border-color: rgb(139 145 151 / 0.4);
 }
 
 .focus\:border-vred-300:focus {
@@ -4574,6 +4615,10 @@ input[type='radio']:hover {
 
 .disabled\:cursor-not-allowed:disabled {
   cursor: not-allowed;
+}
+
+.dark\:cursor-pointer:is(.dark *) {
+  cursor: pointer;
 }
 
 .dark\:\!border:is(.dark *) {
@@ -4836,9 +4881,19 @@ input[type='radio']:hover {
   color: rgb(59 130 246 / var(--tw-text-opacity, 1)) !important;
 }
 
+.dark\:hover\:\!text-orange-500:hover:is(.dark *) {
+  --tw-text-opacity: 1 !important;
+  color: rgb(249 115 22 / var(--tw-text-opacity, 1)) !important;
+}
+
 .dark\:hover\:\!text-red-500:hover:is(.dark *) {
   --tw-text-opacity: 1 !important;
   color: rgb(239 68 68 / var(--tw-text-opacity, 1)) !important;
+}
+
+.dark\:hover\:\!text-vla2:hover:is(.dark *) {
+  --tw-text-opacity: 1 !important;
+  color: rgb(75 168 95 / var(--tw-text-opacity, 1)) !important;
 }
 
 .dark\:hover\:text-blue-400:hover:is(.dark *) {
