--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -741,10 +741,6 @@ video {
   margin: 0.5rem;
 }
 
-.m-4 {
-  margin: 1rem;
-}
-
 .mx-1 {
   margin-left: 0.25rem;
   margin-right: 0.25rem;
@@ -905,10 +901,6 @@ video {
 
 .flex {
   display: flex;
-}
-
-.\!flex {
-  display: flex !important;
 }
 
 .inline-flex {
@@ -1170,6 +1162,10 @@ video {
   width: 80%;
 }
 
+.w-\[96\%\] {
+  width: 96%;
+}
+
 .w-\[calc\(100\%-10px\)\] {
   width: calc(100% - 10px);
 }
@@ -1193,22 +1189,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-\[90\%\] {
-  width: 90%;
-}
-
-.w-\[95\%\] {
-  width: 95%;
-}
-
-.w-\[97\%\] {
-  width: 97%;
-}
-
-.w-\[96\%\] {
-  width: 96%;
 }
 
 .min-w-0 {
@@ -1351,16 +1331,6 @@ video {
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.animate-spin-once {
-  animation: spin 1s linear 1;
 }
 
 .cursor-default {
@@ -1727,6 +1697,11 @@ video {
   border-top-color: rgb(43 52 64 / var(--tw-border-opacity, 1));
 }
 
+.\!bg-blue-50 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(239 246 255 / var(--tw-bg-opacity, 1)) !important;
+}
+
 .\!bg-vlp {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1)) !important;
@@ -1735,11 +1710,6 @@ video {
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
-}
-
-.bg-blue-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(219 234 254 / var(--tw-bg-opacity, 1));
 }
 
 .bg-blue-400 {
@@ -1817,6 +1787,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.bg-vlp-2-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(246 247 247 / var(--tw-bg-opacity, 1));
+}
+
 .bg-vls2 {
   --tw-bg-opacity: 1;
   background-color: rgb(43 52 64 / var(--tw-bg-opacity, 1));
@@ -1830,66 +1805,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-vdp {
-  --tw-bg-opacity: 1;
-  background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
-}
-
-.bg-vdt-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(26 26 30 / var(--tw-bg-opacity, 1));
-}
-
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
-}
-
-.bg-vlp2 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(232 233 235 / var(--tw-bg-opacity, 1));
-}
-
-.bg-vlp-1-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(204 204 204 / var(--tw-bg-opacity, 1));
-}
-
-.bg-vlp-2-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(251 251 251 / var(--tw-bg-opacity, 1));
-}
-
-.bg-vlp-2-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(246 247 247 / var(--tw-bg-opacity, 1));
-}
-
-.bg-vlp-2-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(242 242 244 / var(--tw-bg-opacity, 1));
-}
-
-.bg-vlp-1-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-vlp-1-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-vlp-1-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.\!bg-blue-50 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(239 246 255 / var(--tw-bg-opacity, 1)) !important;
 }
 
 .bg-opacity-50 {
@@ -2037,6 +1952,11 @@ video {
   padding-bottom: 0px;
 }
 
+.py-0\.5 {
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
+}
+
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -2055,11 +1975,6 @@ video {
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
-}
-
-.py-0\.5 {
-  padding-top: 0.125rem;
-  padding-bottom: 0.125rem;
 }
 
 .\!pl-12 {
@@ -2471,27 +2386,8 @@ video {
   --tw-ring-color: transparent;
 }
 
-.ring-vda2 {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(83 207 110 / var(--tw-ring-opacity, 1));
-}
-
 .ring-vls\/40 {
   --tw-ring-color: rgb(139 145 151 / 0.4);
-}
-
-.ring-vls\/90 {
-  --tw-ring-color: rgb(139 145 151 / 0.9);
-}
-
-.ring-vda {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(75 168 95 / var(--tw-ring-opacity, 1));
-}
-
-.ring-white {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity, 1));
 }
 
 .ring-vls\/80 {
@@ -3921,10 +3817,9 @@ input[type='number'] {
   gap: 0.5rem;
   border-radius: 0.25rem;
   border-width: 1px;
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
+  border-color: rgb(139 145 151 / 0.4);
   --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
+  background-color: rgb(242 242 244 / var(--tw-bg-opacity, 1));
   padding: 0.25rem;
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -3941,8 +3836,11 @@ input[type='number'] {
 }
 
 .modal-btn-prim:hover {
+  border-color: rgb(139 145 151 / 0.8);
   --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
+  background-color: rgb(239 246 255 / var(--tw-bg-opacity, 1));
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
 }
 
 .modal-btn-prim {
@@ -3961,8 +3859,7 @@ input[type='number'] {
 }
 
 .dark .modal-btn-prim:is(.dark *) {
-  --tw-border-opacity: 1;
-  border-color: rgb(63 63 70 / var(--tw-border-opacity, 1));
+  border-color: rgb(139 145 151 / 0.4);
   --tw-bg-opacity: 1;
   background-color: rgb(39 39 42 / var(--tw-bg-opacity, 1));
   --tw-text-opacity: 1;
@@ -3970,8 +3867,11 @@ input[type='number'] {
 }
 
 .dark .modal-btn-prim:hover:is(.dark *) {
+  border-color: rgb(139 145 151 / 0.8);
   --tw-bg-opacity: 1;
   background-color: rgb(63 63 70 / var(--tw-bg-opacity, 1));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
 .mod-input {
@@ -4460,13 +4360,18 @@ input[type='radio']:hover {
   border-color: rgb(84 173 247 / var(--tw-border-opacity, 1));
 }
 
+.hover\:border-vls\/80:hover {
+  border-color: rgb(139 145 151 / 0.8);
+}
+
 .hover\:border-vred-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
-.hover\:border-vls\/80:hover {
-  border-color: rgb(139 145 151 / 0.8);
+.hover\:bg-blue-50:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 246 255 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-gray-300:hover {
@@ -4519,16 +4424,6 @@ input[type='radio']:hover {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:bg-blue-100:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(219 234 254 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-blue-50:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 246 255 / var(--tw-bg-opacity, 1));
-}
-
 .hover\:fill-vls:hover {
   fill: #8B9197;
 }
@@ -4546,6 +4441,11 @@ input[type='radio']:hover {
 .hover\:\!text-red-500:hover {
   --tw-text-opacity: 1 !important;
   color: rgb(239 68 68 / var(--tw-text-opacity, 1)) !important;
+}
+
+.hover\:\!text-vda:hover {
+  --tw-text-opacity: 1 !important;
+  color: rgb(75 168 95 / var(--tw-text-opacity, 1)) !important;
 }
 
 .hover\:\!text-vda2:hover {
@@ -4621,10 +4521,6 @@ input[type='radio']:hover {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:ring-vls\/90:hover {
-  --tw-ring-color: rgb(139 145 151 / 0.9);
 }
 
 .hover\:ring-vls\/80:hover {
@@ -4796,6 +4692,11 @@ input[type='radio']:hover {
   border-top-color: rgb(24 24 27 / var(--tw-border-opacity, 1));
 }
 
+.dark\:\!bg-vdp:is(.dark *) {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1)) !important;
+}
+
 .dark\:\!bg-zinc-900:is(.dark *) {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1)) !important;
@@ -4848,26 +4749,6 @@ input[type='radio']:hover {
 .dark\:bg-zinc-900:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-vdt-900:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(26 26 30 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-vdt-700:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 31 35 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-vlp-2-800:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(246 247 247 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:\!bg-vdp:is(.dark *) {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1)) !important;
 }
 
 .dark\:\!text-vds3light:is(.dark *) {
@@ -4959,21 +4840,6 @@ input[type='radio']:hover {
 
 .dark\:ring-transparent:is(.dark *) {
   --tw-ring-color: transparent;
-}
-
-.dark\:ring-vda2:is(.dark *) {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(83 207 110 / var(--tw-ring-opacity, 1));
-}
-
-.dark\:ring-vda:is(.dark *) {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(75 168 95 / var(--tw-ring-opacity, 1));
-}
-
-.dark\:ring-white:is(.dark *) {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity, 1));
 }
 
 .dark\:placeholder\:text-neutral-300:is(.dark *)::-moz-placeholder {
