--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,37 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* Light Theme */
+:root {
+  --l-prim: #ffffff; /* Primary */
+  --l-prim-2: #e8e9eb; /* Primary darker */
+  --l-prim-3: #d3d5d6; /* Primary even darker */
+
+  --l-sec: #8b9197; /* Secondary */
+  --l-sec-2: #2b3440; /* Secondary darker */
+  --l-sec-3: #242c36; /* Secondary even darker */
+  --l-sec-4: #1c2229; /* Secondary even darker+ */
+
+  --l-accent: #54adf7; /* Accent */
+  --l-accent-2: #f28c82; /* Accent darker */
+  --l-accent-3: #ef5d5d; /* Accent even darker */
+}
+
+/* Dark Theme */
+.dark {
+  --d-prim: #18181b; /* Primary */
+  --d-prim-2: #27272a; /* Primary lighter */
+  --d-prim-3: #3f3f46; /* Primary even lighter */
+
+  --d-sec: #d4d4d4; /* Secondary neutral */
+  --d-sec-2: #a3a3a3; /* Secondary lighter */
+  --d-sec-3: #525252; /* Secondary light */
+  --d-sec-4: #404040; /* Secondary der */
+
+  --d-accent: #fea09a; /* Red Accent */
+  --d-accent-2: #fe7f76; /* Softer Red */
+  --d-accent-3: #ef4444; /* Stronger Red */
+}
 
 /* MARK: Fonts */
 @font-face {
@@ -373,7 +404,7 @@ input[type='number'] {
   @apply transition dark:text-vds dark:bg-zinc-800 dark:border-vls/40 dark:hover:text-vlp dark:hover:bg-zinc-700 dark:hover:border-vls/80;
 }
 .mod-input {
-  @apply w-full p-1 pr-20 border text-sm rounded border-vls/40 focus:outline-none focus:ring-1 focus:ring-vls/60 bg-blue-50 hover:bg-blue-100 cursor-pointer dark:bg-vdp2 hover:dark:brightness-125 transition duration-200;
+  @apply w-full p-1 pr-20 border text-sm rounded border-vls/40 focus:outline-none focus:border-vls/60 bg-blue-50 hover:bg-blue-100 dark:focus:brightness-125 focus:bg-blue-100 cursor-pointer dark:bg-vdp2 hover:dark:brightness-125 transition duration-200;
 }
 .modal-btn-prim:after {
   content: '';
@@ -425,6 +456,9 @@ input[type='number'] {
 .underlined-text {
   @apply self-center font-medium text-vls2 dark:text-vds underline decoration-vla dark:decoration-vda;
 }
+
+/* Hover Effect */
+
 /* MARK: Inputs */
 input[type='radio'] {
   appearance: none;
@@ -475,6 +509,7 @@ input[type='radio']:hover {
   background-color: #4ba85f;
   outline-color: #4ba85f;
 }
+
 /* MARK: ANIMATIONS */
 @keyframes glowEffect {
   0% {
@@ -482,15 +517,15 @@ input[type='radio']:hover {
     border-radius: 0.375rem;
   }
   20% {
-    box-shadow: 0 0 4px 4px rgba(83, 207, 110, 0.363) inset; /* Glow peaks here */
+    box-shadow: 0 0 4px 4px rgba(51, 153, 236, 0.63) inset; /* Glow peaks here */
     border-radius: 0.375rem;
   }
   50% {
-    box-shadow: 0 0 6px 6px rgba(84, 207, 111, 0.644) inset; /* Intense glow */
+    box-shadow: 0 0 6px 6px rgba(51, 153, 236, 0.918) inset; /* Intense glow */
     border-radius: 0.375rem;
   }
   80% {
-    box-shadow: 0 0 4px 4px rgba(83, 207, 110, 0.308) inset; /* Start to fade */
+    box-shadow: 0 0 4px 4px rgba(51, 153, 236, 0.452) inset; /* Start to fade */
     border-radius: 0.375rem;
   }
   100% {
@@ -601,7 +636,7 @@ input[type='radio']:hover {
 /* MARK: Toast animation  */
 /* The class we add to newly inserted toast items */
 .toast-animate-enter {
-  /* Slightly slower so the 'falling in' feels more deliberate */
+  /* Slly slower so the 'falling in' feels more deliberate */
   animation: toast-slide-in 0.4s cubic-bezier(0.75, 0.25, 0.25, 0.75) forwards;
 }
 
